[gd_scene load_steps=11 format=3 uid="uid://ct4um6hd5ljc2"]

[ext_resource type="Script" path="res://objects/ball.gd" id="1_r5k51"]
[ext_resource type="Texture2D" uid="uid://b3o1dvsd65yl2" path="res://assets/circle.png" id="2_4411h"]
[ext_resource type="Texture2D" uid="uid://cwr618c6gwd83" path="res://assets/circle1.png" id="3_ng2ht"]

[sub_resource type="Curve" id="Curve_3e71x"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_yrk6q"]
curve = SubResource("Curve_3e71x")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0ke6l"]
particle_flag_disable_z = true
radial_velocity_min = -2.23517e-05
radial_velocity_max = -2.23517e-05
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.2
scale_curve = SubResource("CurveTexture_yrk6q")
hue_variation_min = -2.23517e-08
hue_variation_max = -2.23517e-08

[sub_resource type="CircleShape2D" id="CircleShape2D_kkcas"]

[sub_resource type="Curve" id="Curve_juqcu"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ycip7"]
curve = SubResource("Curve_juqcu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nrt06"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 0.25
scale_max = 0.25
scale_curve = SubResource("CurveTexture_ycip7")

[node name="Ball" type="Node2D" groups=["balls"]]
script = ExtResource("1_r5k51")

[node name="BallMdl" type="CharacterBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="BasicTrail" type="GPUParticles2D" parent="BallMdl"]
modulate = Color(0.5, 0.5, 0.5, 1)
amount = 3
process_material = SubResource("ParticleProcessMaterial_0ke6l")
texture = ExtResource("2_4411h")
lifetime = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallMdl"]
shape = SubResource("CircleShape2D_kkcas")

[node name="CurveTrail" type="GPUParticles2D" parent="BallMdl"]
emitting = false
amount = 14
process_material = SubResource("ParticleProcessMaterial_nrt06")
texture = ExtResource("2_4411h")
lifetime = 2.0

[node name="Sprite2D" type="Sprite2D" parent="BallMdl"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_4411h")

[node name="Spindicator" type="Sprite2D" parent="BallMdl"]
visible = false
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_ng2ht")

[node name="DeleteTimer" type="Timer" parent="."]
one_shot = true

[node name="SpinTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
[connection signal="timeout" from="SpinTimer" to="." method="_on_spin_timer_timeout"]
